deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dsh-bi-interface
  namespace: management
  labels:
    app.kubernetes.io/name: dsh-bi-interface
    app.kubernetes.io/component: dsh-web
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dsh-bi-interface
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
